[Fx] fixed a problem that checkbox UI overflows horizontally.

--- a/src/comm-filter.css
+++ b/src/comm-filter.css
@@ -23,7 +23,10 @@
 }
 
 #PLUGIN_COMM_FILTER>input[name=omni] {
-  flex: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+  min-width: 6ex;
 }
 
 #PLUGIN_COMM_FILTER>button {
